<resources>
    <string name="app_name">RecGroupProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome to Rec-Center Booking System!</string>
    <string name="booking_btn">Schdule A Booking</string>
    <string name="check_btn">Check Time</string>
    <string name="booking_t1">Please fill out the information below</string>
    <string name="bookingt1">Plase fill out the information below</string>
    <string name="studentid">Student ID</string>
    <string name="organization">Organization Name</string>
    <string name="location">Location</string>
    <string name="time">Start Time</string>
    <string name="time_start">Start Time</string>
    <string name="time_end">End Time</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="locationchoose">Choose Location</string>
    <string name="booking_id">Booking ID</string>

    <string name="result">Show Result</string>
    <string name="choose">Choose A Location</string>
    <string name="back">Back To Main Page</string>
    <string name="location_btn">View Locations</string>
    <string name="myBooking_btn">View My Bookings</string>
    <string name="title_locationlist">Locations Listed</string>
    <string name="loc_id">Number</string>
    <string name="loc_name">Location</string>
    <string name="loc_desc">Description</string>
    <string name="partcount">Number of Participants</string>
    <string name="eventdesc">Describe the event</string>
    <string name="eventdesc1">Event</string>
    <string name="summary">Booking Summary</string>
    <string-array name="location_array">
        <item>Harrington Auditorium</item>
        <item>Alumni Stadium</item>
        <item>RoofTop Field</item>
        <item>Donahue Rowing Center</item>
        <item>Squash Courts</item>
    </string-array>
    <string-array name="organisation_array">
        <item>NAWMBA</item>
        <item>SASA</item>
        <item>APICS</item>
        <item>CSSA</item>
        <item>GSG</item>
    </string-array>
    <string-array name="time_array">
        <item>10-11</item>
        <item>11:00am-12pm</item>
        <item>12:00pm-13:00pm</item>
        <item>13:00pm-14:00pm</item>
        <item>12:00pm-13:00pm</item>
        <item>12:00pm-13:00pm</item>
        <item>12:00pm-13:00pm</item>
        <item>12:00pm-13:00pm</item>
        <item>12:00pm-13:00pm</item>
    </string-array>


</resources>
