<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/booking_t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Please enter Student ID"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_studentid"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/myBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/studentid"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/mybookingedit1"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit1_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/submit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel1_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/cancel"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/booking_id"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/eventdesc1"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/loc_name"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/time_start"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp"
            android:layout_weight="0.37" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/time_end"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp"
            android:layout_weight="0.37" />

    </LinearLayout>

    <ListView
        android:id="@+id/mybook_listview"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:textColor="#ff0066"></ListView>


</LinearLayout>