<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/title_locationlist"
        android:textSize="22dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/loc_id"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/loc_name"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/loc_desc"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="25sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/location_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
