<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/location_array" />


    <Button
        android:id="@+id/result_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:text="@string/result"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollview_loc"
        android:layout_width="match_parent"
        android:layout_height="301dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/goback_btn"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/back"
        android:textSize="20sp" />


</LinearLayout>


